crates/ratatui-kit/tests/ui/fail/stateful_extra_args.stderr
error: `stateful(...)` expects exactly `widget, state`
 --> tests/ui/fail/stateful_extra_args.rs:8:36
  |
8 |         stateful(Line::from("a"), b, c)
  |                                    ^
